Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- No longer catch a `NotImplemented` string exception in the MembershipTool
  in deleteMembers.

- Added `__name__` to the FSPythonScript execution scope in addition to
  `__file__`. This makes Python 2.6's warnings module happy.

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- Added `icon_expr` as a new property to type information. This allows you
  to specify the `content_icon` as an expression and store it. This avoids
  creating the expression on the fly at rendering time.

- Removed superGetAttr fallback from SkinnableObjectManager. None of its base
  classes have a `__getattr__` method anymore.

- PortalObject: Removed backwards compatibility code in getSiteManager.
  Please use CMFDefault's upgrade steps for upgrading old CMF sites.

- Fixed compatibility with non-string exceptions on Zope trunk.

- Added remove support to GenericSetup types tool exportimport handler.

- FiveActionsTool: Removed the tool and all functionality for bridging
  between Zope 3-style menu items and CMF actions. The CMF has been going
  a different route for a long time and the code is unused and 
  unmaintained.

- Actions: Added deprecation warnings to the ZMI actions tab and 
  most listActions methods where old-style actions are found 
  asking developers to move to new-style actions instead. These 
  warnings allow us to remove old-style actions code by version 2.4.

- Discussion tool: Removed the listActions method that would return 
  a hardcoded Reply action. This action has been handled by the